Changed the way to load resources. Began to create a menu for connecting to the game.