@@ -15,6 +15,7 @@ import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class King extends FigureWithSameLinesTookAndStep {
@@ -77,8 +78,7 @@ public class King extends FigureWithSameLinesTookAndStep {
 
     @Override
     public Image getImage() throws IOException {
-        String path = Properties.PATH_TO_FIGURES;
-        BufferedImage im = ImageIO.read(new File(path + getColor().colorPrefix + "_" + imageName));
+        BufferedImage im = super.loadImage(getColor().colorPrefix + "_" + imageName);
         return Scalr.resize(im, FieldView.cellSize);
     }
 
@@ -99,7 +99,7 @@ public class King extends FigureWithSameLinesTookAndStep {
                         && coord.x < field.size
                         && coord.y >= 0
                         && coord.y < field.size
-        ).map(List::of).toList();
+        ).map(List::of).collect(Collectors.toList());
     }
 
     @Override
